force-app/main/default/objects/VCG_CPQ_Pricing_Sequence_Condition__c/VCG_CPQ_Pricing_Sequence_Condition__c.object-meta.xml
<CustomObject>
    <label>VCG CPQ Pricing Sequence Condition</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>VCG CPQ Pricing Sequence Conditions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>