force-app/main/default/objects/VCG_CPQ_Pricing_Sequence_Condition__c/fields/Access_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Access_Sequence__c</fullName>
    <label>Access Sequence</label>
    <referenceTo>VCG_CPQ_Pricing_Access_Sequence__c</referenceTo>
    <relationshipLabel>Sequence Conditions</relationshipLabel>
    <relationshipName>Sequence_Conditions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>