force-app/main/default/objects/VCG_CPQ_Pricing_Sequence_Condition__c/fields/Condition__c.field-meta.xml
<CustomField>
    <fullName>Condition__c</fullName>
    <label>Condition</label>
    <referenceTo>VCG_CPQ_Pricing_Condition__c</referenceTo>
    <relationshipLabel>Sequence Conditions</relationshipLabel>
    <relationshipName>Sequence_Conditions</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>